# ChangeLog for mail-filter/spamassassin-fuzzyocr
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/spamassassin-fuzzyocr/ChangeLog,v 1.24 2010/11/09 14:32:06 voyageur Exp $

  09 Nov 2010; Bernard Cafarelli <voyageur@gentoo.org> metadata.xml:
  Remove myself from maintainers

  30 Jul 2010; Bernard Cafarelli <voyageur@gentoo.org>
  spamassassin-fuzzyocr-3.6.0-r2.ebuild,
  +files/spamassassin-fuzzyocr-3.6.0-fix_tesseract.patch:
  Fix tesseract support with tiff images, bug #330461

*spamassassin-fuzzyocr-3.6.0-r2 (29 Jul 2010)

  29 Jul 2010; Bernard Cafarelli <voyageur@gentoo.org>
  -spamassassin-fuzzyocr-3.6.0-r1.ebuild,
  +spamassassin-fuzzyocr-3.6.0-r2.ebuild,
  files/spamassassin-fuzzyocr-3.6.0-untaint_ocr_helper.patch:
  Update untaint patch, hope this finally fixes bug #313633

*spamassassin-fuzzyocr-3.6.0-r1 (19 May 2010)

  19 May 2010; Bernard Cafarelli <voyageur@gentoo.org>
  +spamassassin-fuzzyocr-3.6.0-r1.ebuild,
  +files/spamassassin-fuzzyocr-3.6.0-untaint_ocr_helper.patch:
  Apply patch from Debian to untaint ocr helpers, bug #313633

  26 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org>
  -spamassassin-fuzzyocr-2.3b.ebuild, -spamassassin-fuzzyocr-3.5.1.ebuild,
  -spamassassin-fuzzyocr-3.5.1-r1.ebuild:
  Drop old versions, they do not work with current in-tree SA

  26 Apr 2010; Markus Meier <maekke@gentoo.org>
  spamassassin-fuzzyocr-3.6.0.ebuild:
  x86 stable, bug #314733

*spamassassin-fuzzyocr-3.6.0 (13 Nov 2009)

  13 Nov 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +spamassassin-fuzzyocr-3.6.0.ebuild,
  +files/spamassassin-fuzzyocr-3.6.0-fix_falsepositives.patch,
  +files/spamassassin-fuzzyocr-3.6.0-fix_tmpdir.patch, metadata.xml:
  Version bump (bug #285327) and add myself to maintainers, patches from
  bugs #174993, #273183 (both merged in #251687), default to ocrad ocr
  engine if none are specified (bugs #171376, #254751), RDEPEND on netpbm