@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX disablegocr.patch 574 RMD160 78e1fb95a5758f7b4c0a9c9d40f4d4d9e1a04dbb SHA1 c6ffbdaaa1e794e3e94118501704978d1876b743 SHA256 71914e653efba7688f2edeb396c5ff99d98e42d3541190095041d17549f5812b
 AUX disableocrad.patch 1165 RMD160 8162db6d5687852a914c84cdc200149361aa5c51 SHA1 e166fde2208c6a6a33b8374e03a92036a4e63f46 SHA256 93020dacb93ba6c462db685dfa9db79ffe28c155ab231b56aa538d544f9f5aa5
 AUX enabletesseract.patch 656 RMD160 4b6452e84815fbe8d5b47e0cdcdc736c99cfa3dd SHA1 b31f8e9f5f9733bfe3faf08671807853508cfaa5 SHA256 e988dc3fbdf6250fbdd34f8933ffc3f9304e5bb428bb3a1de49a0ce87cab8b90
@@ -7,7 +10,14 @@ AUX spamassassin-fuzzyocr-3.6.0-fix_tesseract.patch 1054 RMD160 e73ded71df21e950
 AUX spamassassin-fuzzyocr-3.6.0-fix_tmpdir.patch 2104 RMD160 68536642772122c171cb537876778f5eaad23925 SHA1 d2345babbc6eac33c8a531f31bf763eee21d03a1 SHA256 987dadbcd0e85417d363afdd9f8b78baf53b237f2ead34e54d30908cae9d0167
 AUX spamassassin-fuzzyocr-3.6.0-untaint_ocr_helper.patch 1771 RMD160 8b37674b41db445fe87c6ad336ecef9a33d22e77 SHA1 ff880deeb3019d15905ee06b17b85c75750ed673 SHA256 49a90c5be418909232055e73913eb21db3a8d5a4cb1a86c7004611c23dc510b2
 DIST fuzzyocr-3.6.0.tar.gz 127103 RMD160 3aa1ee63ffe0996dee3b1c988a2e96bc2edbbe8c SHA1 c54a797899401b9922e5d6371a607780923192de SHA256 dd345c9500c3c3cdc33503863fe234bf3c2720c54b303e6cbc94dbe8aaf3a218
-EBUILD spamassassin-fuzzyocr-3.6.0-r2.ebuild 5520 RMD160 62f7751abb032bda7efbea44d30b3ba37f9eb2fa SHA1 457b2249096b175ba8809ea953565317319b8f22 SHA256 ed275a2f11bb010b67e9bb3f08de8c0852d2924aece41ce17752c9653a60a8ad
-EBUILD spamassassin-fuzzyocr-3.6.0.ebuild 5381 RMD160 e5b88a338b351a8365fb9c6d16c0fb80d9a906cc SHA1 9e3eaa9786825408e202126037fe041384dbad5e SHA256 9267a938e874c3c43944c5b91240fb480808d4b89c40c76dbdfcc39d2d59b2b6
-MISC ChangeLog 4476 RMD160 acdceaafc001709f50f0fdb59495137d50917cbf SHA1 6ff3a02f0000e6175c51f53cffb5646d6331bbac SHA256 c534d0a28e32b1b045786e058c27fd4d8c7a90f5c04c38c4454ba080913ca1ae
+EBUILD spamassassin-fuzzyocr-3.6.0-r2.ebuild 5524 RMD160 aea4d42159d86350753c0413ec0de70fe38c4782 SHA1 1170b62de12a7db99b23b803e05c67ef80635a41 SHA256 16f5547720637cbe84c3cb074d03717e0022ef0f720b189bba9e740258d9e546
+EBUILD spamassassin-fuzzyocr-3.6.0.ebuild 5387 RMD160 d987c873af2515ae6cbe0ebeaf544ddff496fb6d SHA1 087d7a4ae799ba9154a515824475d59715e74152 SHA256 c1475bfca7bbc20416ccc64c1aff4d4aa3570056e44452b217da0c1dc2e107dd
+MISC ChangeLog 4629 RMD160 c448d457852231bae45597142c774aba4e084eae SHA1 907f30813567b37a8e1e08f35c89d9326c1de8b6 SHA256 d01d9cc74f3f9f44154906f8649d2fd7c200ee60d4f18f4bf27547746c9231a6
 MISC metadata.xml 1118 RMD160 cc96d5c29744934090de9d578d96a5e6914f5364 SHA1 c3d56b7ea906ac53042750fb9a6eefcf62a4f933 SHA256 727c8496072e2af203a92dfb37f41c1ce1d0cc1c7a4da9bac885c1d4b1baf729
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEARECAAYFAk/NTd8ACgkQ/ejvha5XGaN1qACfWTtkX/Jezjs52gARR19HqY4U
+9BcAoOME+lBAtCV6VNoZQbSxwMMyBWhQ
+=gqep
+-----END PGP SIGNATURE-----
